--- a/style.css
+++ b/style.css
@@ -47,3 +47,53 @@ table {
 
 /* Header */
 
+* {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 30px;
+    align-items: center;
+}
+
+.logo {
+    height: 80px;
+    width: 80px
+}
+
+.header-buttons {
+    display: flex;
+    gap: 40px;
+    font-size: 1.2rem;
+    color: white;
+    cursor: pointer;
+}
+
+ a, a:hover, a:focus, a:active {
+      text-decoration: none;
+      color: inherit;
+ }
+
+.locations:hover {
+    color: #0047a0;
+}
+
+.catering:hover {
+    color: #ffc224;
+}
+
+.order:hover {
+    color: #cd2e3a;
+}
+
+
+
+
+.backsplash {
+    background-image: url(./assets/Backsplash.jpg);
+    height: 100vh;
+    width: 100vw;
+    background-size: cover;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
+}
