--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ table {
 
 /* Header */
 
+@font-face {
+    font-family: osake;
+    src: url(./assets/Fonts/osake-font/Osake-x3oqj.otf);
+}
+
 * {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -65,7 +70,7 @@ table {
 .header-buttons {
     display: flex;
     gap: 40px;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
     color: white;
     cursor: pointer;
 }
@@ -87,8 +92,7 @@ table {
     color: #cd2e3a;
 }
 
-
-
+/* Main Page */
 
 .backsplash {
     background-image: url(./assets/Backsplash.jpg);
@@ -96,4 +100,20 @@ table {
     width: 100vw;
     background-size: cover;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
+}
+
+.title-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+    width: 100vw;
+    flex-direction: column;
+}
+
+.title-name{
+    font-size: 10em;
+    text-align: center;
+    font-family: "osake";
+    color: white;
 }
