--- a/style.css
+++ b/style.css
@@ -1,46 +1,127 @@
 /* Reset CSS */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* -------------------------------------- */
@@ -48,72 +129,240 @@ table {
 /* Header */
 
 @font-face {
-    font-family: osake;
-    src: url(./assets/Fonts/osake-font/Osake-x3oqj.otf);
+  font-family: osake;
+  src: url(./assets/Fonts/osake-font/Osake-x3oqj.otf);
 }
 
-* {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+*,
+main,
+section {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
 .header {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 30px;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 30px;
+  align-items: center;
 }
 
 .logo {
-    height: 80px;
-    width: 80px
+  height: 80px;
+  width: 80px;
 }
 
 .header-buttons {
-    display: flex;
-    gap: 40px;
-    font-size: 0.9rem;
-    color: white;
-    cursor: pointer;
+  display: flex;
+  gap: 40px;
+  font-size: 0.9rem;
+  color: white;
+  cursor: pointer;
+  font-weight: 700;
 }
 
- a, a:hover, a:focus, a:active {
-      text-decoration: none;
-      color: inherit;
- }
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
 
 .locations:hover {
-    color: #0047a0;
+  color: #ffc224;
 }
 
 .catering:hover {
-    color: #ffc224;
+  color: #0047a0;
 }
 
 .order:hover {
-    color: #cd2e3a;
+  color: #cd2e3a;
 }
 
 /* Main Page */
 
 .backsplash {
-    background-image: url(./assets/Backsplash.jpg);
-    height: 100vh;
-    width: 100vw;
-    background-size: cover;
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
+  background-image: url(./assets/Backsplash.jpg);
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
 }
 
-.title-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70vh;
-    width: 100vw;
-    flex-direction: column;
+.parallax {
+  min-height: 100vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.title-name{
-    font-size: 10em;
-    text-align: center;
-    font-family: "osake";
-    color: white;
+.title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  width: 100vw;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.title-name {
+  font-size: 10em;
+  text-align: center;
+  font-family: "osake";
+  color: white;
+}
+
+.title-subtext {
+  font-size: 2em;
+  text-align: center;
+  color: white;
+}
+
+.title-buttons-container {
+  display: flex;
+  gap: 350px;
+}
+
+.title-button {
+  width: 200px;
+  height: 60px;
+  background-color: transparent;
+  border-radius: 30px;
+  border: 2px solid white;
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.title-button.about-button:hover {
+  color: #ffc224;
+  border-color: #ffc224;
+  box-shadow: 4px 5px 10px -2px rgba(48, 48, 48, 0.467);
+}
+
+.title-button.menu-button:hover {
+  color: #cd2e3a;
+  border-color: #cd2e3a;
+  box-shadow: 4px 5px 10px -2px rgba(48, 48, 48, 0.467);
+}
+
+/* About Us */
+
+.about-us {
+  display: grid;
+  grid-template: 65% 35%/ 60% 40%;
+  height: 50vh;
+  margin: 40px 50px;
+  font-weight: 200;
+}
+
+.info-contaner {
+  grid-area: 1/1/2/-1;
+  display: grid;
+  grid-template: 50% 50% /70% 30%;
+  row-gap: min(20px);
+}
+
+.info {
+  grid-area: 1/1/-1/2;
+  width: 60%;
+  font-size: 1.2rem;
+  margin-left: 10%;
+  line-height: 40px;
+  align-self: center;
+}
+
+.location {
+  grid-area: 1/2/2/-1;
+  display: flex;
+  flex-direction: column;
+  width: 65%;
+}
+
+.about-us-subheaders {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  color: #cd2e3a;
+  font-weight: 500;
+  font-size: 1.3rem;
+}
+
+.hours {
+  grid-area: 2/2/2/-1;
+}
+
+.reviews {
+  grid-area: 2/1/-1/-1;
+  display: flex;
+  gap: 30px;
+}
+
+.review {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
+
+.menu {
+  background-image: url(./assets/Backsplash\ 2.jpg);
+  height: 100vh;
+  background-size: cover;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
+  display: grid;
+  grid-template: 25% 75%/ 1fr 1fr 1fr;
+  padding: 0 100px;
+  justify-items: center;
+  color: white
+}
+
+.main-menu-title {
+  grid-area: 1/1/2/-1;
+  font-size: 5rem;
+  font-family: "osake";
+  justify-self: center;
+  align-self: center;
+}
+
+.menu-title {
+  color: white;
+  font-size: 2rem;
+}
+
+.large-price-tag {
+  color: white;
+}
+
+.recommendations {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.bi-bim-bap {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.specials {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.menu-item {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-size: 1.2rem;
+}
+
+li {
+    margin-left: 20px;
 }
