--- a/style.css
+++ b/style.css
@@ -336,6 +336,7 @@ a:active {
 
 .large-price-tag {
   color: white;
+  font-size: 1rem;
 }
 
 .recommendations {
@@ -364,5 +365,12 @@ a:active {
 }
 
 li {
+    margin-left: 20px;
+}
+
+.price-grid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    row-gap: min(20px);
     margin-left: 20px;
 }
