--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ html {
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
   display: grid;
   grid-template: 25% 75%/ 1fr 1fr 1fr;
-  padding: 0 100px;
+  padding: 40px 100px;
   justify-items: center;
   color: white
 }
