--- a/style.css
+++ b/style.css
@@ -124,14 +124,13 @@ table {
   border-spacing: 0;
 }
 
-.container {
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
+html {
+  overflow:   scroll;
 }
-.container::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
 }
-
 /* -------------------------------------- */
 
 /* Header */
