--- a/style.css
+++ b/style.css
@@ -123,12 +123,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
-html {
-  overflow:   scroll;
 }
 ::-webkit-scrollbar {
-    width: 0px;
+    width: 0vw;
     background: transparent; /* make scrollbar transparent */
 }
 /* -------------------------------------- */
