--- a/style.css
+++ b/style.css
@@ -123,9 +123,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+html {
+  overflow: scroll;
 }
 ::-webkit-scrollbar {
-    width: 0vw;
+    width: 0px;
+    height: 0px;
     background: transparent; /* make scrollbar transparent */
 }
 /* -------------------------------------- */
